<resources>
    <string name="app_name">ThryveOS</string>
    <string name="session_expired">session_expired</string>
    <string name="alert">Alert</string>
    <string name="post_detail">Post Detail</string>
    <string name="please_try_again">Please try again</string>
    <string name="plz_wait">Plz wait</string>
    <string name="error_found">Error Found</string>
    <string name="click_me">Click Me</string>
    <string name="android_base_2025">Android Base 2025</string>
    <string name="todo">TODO</string>
    <string name="app_name_splash">ThryveOS</string>
    <string name="welcome_to_your_emotional_space">Welcome to Your Emotional Space.</string>
    <string name="a_calm_space_to_feel_seen_understood_and_gently_guided_through_your_emotional_world">A calm space to feel seen, understood, and gently guided through your emotional world.</string>
    <string name="begin_my_journey">Begin My Journey</string>
    <string name="get_started_now">Get Started Now</string>
    <string name="create_an_account_or_log_in_to_explore_our_app">Create an account or log in to explore our app</string>
    <string name="or">Or</string>
    <string name="enter_email">Enter Email</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="create_my_space">Create My Space</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="enter_my_space">Enter My Space</string>
    <string name="don_t_have_an_account">Don’t have an account?</string>
    <string name="set_password">Set Password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="birth_of_date">Birth of date</string>
    <string name="phone_number">Phone Number</string>
    <string name="we_have_sent_code_to_your_email_to_verify">We have sent code to your email to verify</string>
    <string name="verify">Verify</string>
    <string name="resend_code_in">Resend code in</string>
    <string name="consent_data_privacy"><![CDATA[Consent &\n Data Privacy]]></string>
    <string name="your_privacy_matters">Your Privacy Matters</string>
    <string name="confirm">Confirm</string>
    <string name="i_agree_to_the_terms_of_use_and_privacy_policy">I agree to the Terms of Use and Privacy Policy</string>
    <string name="i_consent_to_anonymous_insights_for_feature_improvement">I consent to anonymous insights for feature improvement</string>
    <string name="remember_this_is_not_a_therapy_tool_and_will_never_provide_medical_advice">Remember this is not a therapy tool and will never provide medical advice.</string>
    <string name="begin_my_emotional_profile">Begin My Emotional Profile</string>
    <string name="you_re_in_let_s_explore_nyour_emotional_world">You’re in. Let’s explore\nyour emotional world.</string>
    <string name="we_ll_start_by_building_a_picture_of_your_personality_attachment_style_and_inner_world">We’ll start by building a picture of your\n personality, attachment style, and inner world.</string>
    <string name="next">Next</string>
    <string name="feel_free_to_describe_your_typical_reaction_e_g_withdraw_confront_seek_reassurance_reflect_quietly_etc">Feel free to describe your typical reaction - e.g., withdraw, confront, seek reassurance, reflect quietly, etc.</string>
    <string name="creating_your_nemotional_profile">Creating your \nemotional profile...</string>
    <string name="we_re_tuning_in_to_your_patterns_traits_nand_inner_signals_just_for_you">We’re tuning in to your patterns, traits,\nand inner signals—just for you</string>
    <string name="here_s_what_we_nlearned_about_you">Here’s What We\nLearned About You</string>
    <string name="a_thoughtful_explorer_with_a_strong_heart_deeply_open_quietly_reflective_and_learning_to_trust_connection">A thoughtful explorer with a strong heart—deeply open, quietly reflective, and learning to trust connection</string>
    <string name="personality_profile">Personality Profile</string>
    <string name="summary">Summary</string>
    <string name="you_re_high_in_openness_and_gratitude_which_suggests_creativity_and_emotional_depth_your_moderate_neuroticism_may_point_to_emotional_sensitivity">You’re high in Openness and Gratitude, which suggests creativity and emotional depth. Your moderate Neuroticism may point to emotional sensitivity.</string>
    <string name="attachment_style">Attachment Style</string>
    <string name="your_attachment_style_is_layered_at_your_core_you_lean_secure_but_when_under_emotional_strain_avoidant_patterns_may_surface_anxious_tendencies_are_present_but_less_dominant">Your attachment style is layered. At your core, you lean Secure. But when under emotional strain, Avoidant patterns may surface. Anxious tendencies are present but less dominant</string>
    <string name="your_top_4_insights">Your Top 4 insights</string>
    <string name="dispositional_traits">Dispositional traits</string>
    <string name="reflective_sensitive">Reflective, sensitive</string>
    <string name="relational_tendencies">Relational tendencies</string>
    <string name="secure_but_cautious">Secure but cautious</string>
    <string name="wellbeing_snapshot">Wellbeing snapshot</string>
    <string name="emotionally_steady">Emotionally steady</string>
    <string name="thinking_style">Thinking style</string>
    <string name="deep_internal_processor">Deep internal processor</string>
    <string name="see_my_next_steps">See My Next Steps</string>
    <string name="MeetMyAICoach">Meet My Empathy Coach</string>
    <string name="your_next_best_steps">Your Next Best Steps</string>
    <string name="make_the_most_of_your_emotional_insight">Make the most of your emotional insight.</string>
    <string name="start_journaling">Start Journaling</string>
    <string name="simulate_a_real_life_scenario_to_improve_how_you_respond_emotionally">Simulate a real-life scenario to improve how you respond emotionally.</string>
    <string name="capture_how_you_feel_and_reflect_on_emotional_patterns">Capture how you feel and reflect on emotional patterns.</string>
    <string name="see_how_your_emotional_patterns_evolve_over_time">See how your emotional patterns evolve over time</string>
    <string name="start_practicing_with_nyour_empathy_coach">Start practicing with \nyour empathy coach</string>
    <string name="choose_a_moment_that_feels_emotionally_charged_we_ll_help_you_explore_it_with_clarity_and_care">Choose a moment that feels emotionally charged — we’ll help you explore it with clarity and care.</string>
    <string name="something_i_m_going_through">Something I’m going through...</string>
    <string name="explore_this_moment">Explore This Moment</string>
    <string name="choose_a_situation_that_reflects_your_conflict">Choose a situation that reflects your conflict.</string>
    <string name="choose_a_situation_you_d_like_to_explore_or_tell_us_about_something_real">Choose a situation you’d like to explore or \ntell us about something real</string>
    <string name="we_keep_having_the_same_fight_in_my_relationship">We keep having the same fight in my relationship.</string>
    <string name="every_talk_with_my_parent_turns_into_an_argument">Every talk with my parent turns into an argument.</string>
    <string name="my_colleague_snaps_at_me_in_meetings">My colleague snaps at me in meetings.</string>
    <string name="none_of_these_fit">None of these fit?</string>
    <string name="begin_practice">Begin Practice</string>
    <string name="how_would_you_like_the_other_person_to_respond">How would you like the other person to respond?</string>
    <string name="scenario_we_keep_having_the_same_fight_in_my_relationship">Scenario: We keep having the same fight in my \nrelationship.</string>
    <string name="view_insights">View Insights</string>
    <string name="type_here">Type here to begin the simulation</string>
    <string name="simulation_insights">Simulation Insights</string>
    <string name="concern_delivery">Concern stems from care but can trigger fears of irrelevance or decline if not delivered sensitively.</string>
    <string name="unsolicited_help">Offering assistance without permission, especially to aging parents, may be perceived as an attempt to control.</string>
    <string name="emotional_authority">Age and experience carry emotional weight, often overriding logical arguments until emotional safety is established.</string>
    <string name="reflect_in_journal">Reflect in Journal</string>
    <string name="explore_a_new_approach">Explore a New Approach</string>
    <string name="upgrade">Upgrade</string>
    <string name="unlock_more_simulations_and_advanced_features_for_deeper_insights_and_growth">Unlock more simulations and advanced features for deeper insights and growth.</string>
    <string name="choose_your_plan">Choose Your Plan</string>
    <string name="today_s_journal">Today’s Journal</string>
    <string name="what_s_on_your_mind_right_now">What’s on your mind right now?</string>
    <string name="i_m_listening">I’m Listening</string>
    <string name="the_conversation_highlighted_the_challenge_of_expressing_care_without_triggering_resistance">The conversation highlighted the challenge of expressing care without triggering resistance.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="quick_actions">Quick Actions</string>
    <string name="last_scenario">Last scenario</string>
    <string name="boundary_with_a_friend">Boundary with a friend</string>
    <string name="resume_conversation">Resume Conversation</string>
    <string name="last_journal_entry">Last journal entry</string>
    <string name="feeling_unseen">Feeling unseen</string>
    <string name="open_journal">Open Journal</string>
    <string name="emotional_snapshot">Emotional Snapshot</string>
    <string name="your_emotional_trend_this_week">Your emotional trend this week</string>
    <string name="mood">Mood</string>
    <string name="mostly_balanced">Mostly Balanced</string>
    <string name="reflection_streak">Reflection streak</string>
    <string name="_3_days_in_a_row">3 days in a row</string>
    <string name="most_used_emotion">Most-used emotion</string>
    <string name="overwhelmed">Overwhelmed</string>
    <string name="mood_trend">Mood Trend</string>
    <string name="reflect_on_your_week">Reflect on your week</string>
    <string name="start_a_guided_reflection">Start a Guided Reflection</string>
    <string name="view_previous_simulations">View Previous Simulations</string>
    <string name="previous_journal">Previous Journal</string>
    <string name="add_new_journal">Add New Journal</string>
    <string name="your_insights">Your Insights</string>
    <string name="profile">Profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="notification">Notification</string>
    <string name="change_password">Change Password</string>
    <string name="help">Help</string>
    <string name="logout">Logout</string>
    <string name="delete_profile">Delete Profile</string>
    <string name="edit">Edit</string>
    <string name="change_your_password">Change your password</string>
    <string name="old_password">Old Password</string>
    <string name="enter_password">Enter password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="how_are_you_feeling_today">How are you feeling today?</string>
    <string name="add_your_journal_for_today">Add your journal for today</string>
    <string name="who_do_you_want_to_talk_to">Who do you want to talk to?</string>
    <string name="select_a_common_relationship_or_describe_a_custom_one_for_the_ai_to_simulate">Select a common relationship or describe a custom one for the Empathy Coach to simulate.</string>
</resources>