<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="com.tech.sid.ui.auth.AuthCommonVM" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/card_view_color_auth">

        <ImageView
            android:id="@+id/back_button"
            android:layout_width="@dimen/_14sdp"
            android:layout_height="@dimen/_14sdp"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:onClick="@{v->vm.onClick(v)}"
            android:src="@drawable/app_back_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/app_logo_ll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/back_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/back_button">

            <ImageView
                android:id="@+id/app_logo"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:src="@drawable/splash_app_logo"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/headingTitle"
                style="@style/dm_sans_semibold_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5sdp"
                android:text="@string/app_name_splash"
                android:textColor="@color/text_color_splash"
                android:textSize="@dimen/_17ssp"
                app:layout_constraintTop_toTopOf="@id/app_logo"
                app:layout_constraintBottom_toBottomOf="@id/app_logo"
                app:layout_constraintStart_toEndOf="@id/app_logo" />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tvYourIn"
                style="@style/dm_sans_bold_textview"
                textLinearGradient='@{"view"}'
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/you_re_in_let_s_explore_nyour_emotional_world"
                android:textSize="@dimen/_24ssp" />

            <TextView
                style="@style/inter_regular_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:gravity="center"
                android:text="@string/we_ll_start_by_building_a_picture_of_your_personality_attachment_style_and_inner_world"
                android:textColor="@color/text_color_splash"
                android:textSize="@dimen/_9ssp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:background="@drawable/button_bg"
            android:gravity="center"
            android:onClick="@{v->vm.onClick(v)}"
            app:layout_constraintBottom_toBottomOf="parent">

            <TextView
                style="@style/dm_sans_bold_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/begin_my_emotional_profile"
                android:textColor="@color/text_color_splash"
                android:textSize="@dimen/_13sdp" />


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5sdp"
                android:scaleType="fitXY"
                android:src="@drawable/splash_left_arrow" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>